--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "contributors": [
     "piyali das <piyalidas.it@gmail.com>"
   ],
-  "homepage": "http://localhost:4200/home",
+  "homepage": "http://localhost:3000",
   "keywords": [
     "ecommerce",
     "POC",
