--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "globalterrorism",
   "version": "0.0.1",
+  "main": "app.js",
   "author": {
     "name": "Piyali Das",
     "email": "piyalidas.it@gmail.com"
@@ -36,7 +37,8 @@
     "express": "^4.17.1",
     "mustache": "^3.1.0",
     "mustache-express": "^1.3.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "npm": "^6.8.0"
   },
   "devDependencies": {
     "@types/node": "~8.9.4",
